# 11-Autenticação/ExpAPI/backend/src/swagger-output.json
@@ -7,15 +7,11 @@
   },
   "host": "localhost:9000",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
     "/v1/produto/": {
       "get": {
-        "tags": [
-          "Produto"
-        ],
+        "tags": ["Produto"],
         "summary": "Lista todos os produtos.",
         "description": "",
         "parameters": [
@@ -40,9 +36,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Produto"
-        ],
+        "tags": ["Produto"],
         "summary": "Adiciona um novo produto na base.",
         "description": "",
         "parameters": [
@@ -66,9 +60,7 @@
     },
     "/v1/produto/{id}": {
       "get": {
-        "tags": [
-          "Produto"
-        ],
+        "tags": ["Produto"],
         "summary": "Mostra um produto com base no ID.",
         "description": "",
         "parameters": [
@@ -90,9 +82,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Produto"
-        ],
+        "tags": ["Produto"],
         "summary": "Modifica os atributos de um produto.",
         "description": "",
         "parameters": [
@@ -121,9 +111,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Produto"
-        ],
+        "tags": ["Produto"],
         "summary": "Apaga um produto com base no ID.",
         "description": "",
         "parameters": [
@@ -144,9 +132,7 @@
     },
     "/v1/language/": {
       "post": {
-        "tags": [
-          "Language"
-        ],
+        "tags": ["Language"],
         "summary": "Troca o idioma da aplicação.",
         "description": "",
         "parameters": [
@@ -167,9 +153,7 @@
     },
     "/v1/usuario/": {
       "get": {
-        "tags": [
-          "Usuario"
-        ],
+        "tags": ["Usuario"],
         "summary": "Lista todos os usuário.",
         "description": "",
         "parameters": [
@@ -194,15 +178,13 @@
         }
       },
       "post": {
-        "tags": [
-          "Usuario"
-        ],
+        "tags": ["Usuario"],
         "summary": "Cria um usuário novo.",
         "description": "",
         "parameters": [
           {
             "name": "tipoUsuario",
-            "description": "ID do usuário",
+            "description": "Tipo do usuário",
             "in": "query",
             "type": "string"
           },
@@ -226,9 +208,7 @@
     },
     "/v1/usuario/{id}": {
       "get": {
-        "tags": [
-          "Usuario"
-        ],
+        "tags": ["Usuario"],
         "summary": "Mostra um usuário com base no ID.",
         "description": "",
         "parameters": [
@@ -250,10 +230,8 @@
         }
       },
       "put": {
-        "tags": [
-          "Usuario"
-        ],
-        "summary": "Modifica os atributos de um produto.",
+        "tags": ["Usuario"],
+        "summary": "Modifica os atributos de um usuário.",
         "description": "",
         "parameters": [
           {
@@ -261,29 +239,27 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "ID do produto"
+            "description": "ID do usuário"
           },
           {
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/UpdateProdutoDto"
+              "$ref": "#/definitions/UpdateUsuarioDto"
             }
           }
         ],
         "responses": {
           "200": {
             "schema": {
-              "$ref": "#/definitions/Produto"
+              "$ref": "#/definitions/Usuario"
             },
             "description": "OK"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Usuario"
-        ],
+        "tags": ["Usuario"],
         "summary": "Apaga um usuário com base no ID.",
         "description": "",
         "parameters": [
@@ -304,9 +280,7 @@
     },
     "/v1/auth/signup": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "responses": {
           "default": {
@@ -317,9 +291,7 @@
     },
     "/v1/auth/login": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "responses": {
           "default": {
@@ -330,9 +302,7 @@
     },
     "/v1/auth/logout": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "responses": {
           "default": {
@@ -428,7 +398,24 @@
         },
         "senha": {
           "type": "string",
-          "example": "allan123"
+          "example": "admin123"
+        }
+      }
+    },
+    "UpdateUsuarioDto": {
+      "type": "object",
+      "properties": {
+        "nome": {
+          "type": "string",
+          "example": "Allan"
+        },
+        "email": {
+          "type": "string",
+          "example": "aca@gmail.com"
+        },
+        "senha": {
+          "type": "string",
+          "example": "admin123"
         }
       }
     },
